--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: java
 jdk:
+  - oraclejdk7  
   - oraclejdk8
-  - openjdk8
   - oraclejdk9
+  - openjdk7
+  - openjdk8
+  - openjdk9
   - openjdk10
   - openjdk11
+script:
+  - mvn clean install "-Dgpg.signature.skip=$GPG_SIGNATURE_SKIP"
