--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,23 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>java11+</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <properties>
+                <!-- The Javadoc generation started to fail with OpenJDK 11.0.2 (11.0.1 was OK) and OpenJDK 12-ea:
+                     "The code being documented uses modules but the packages defined in 
+                     https://docs.oracle.com/javase/7/docs/api/ are in the unnamed module."
+                     See: https://bugs.openjdk.java.net/browse/JDK-8212233 
+                -->
+                <maven.javadoc.skip>true</maven.javadoc.skip>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <pluginManagement>
             <plugins>
