Excluded XML files from the Sonar analysis

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,5 @@ after_success:
         "-Dsonar.projectKey=$SONAR_PROJECT_KEY" \
         "-Dsonar.organization=$SONAR_ORGANIZATION_KEY" \
         "-Dsonar.host.url=$SONAR_URL" \
-        "-Dsonar.login=$SONAR_TOKEN" || echo 'Skipping Sonar execution'
+        "-Dsonar.login=$SONAR_TOKEN" \
+        "-Dsonar.exclusions=**/*.xml" || echo 'Skipping Sonar execution'
