--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${spring-version}</version>
+            <scope>provided</scope>
         </dependency>
         
         <dependency>
