--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,18 @@
 
     <groupId>com.mastercard.developer</groupId>
     <artifactId>oauth1-signer</artifactId>
-    <version>1.4.0</version>
+    <version>1.4.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>Zero dependency library for generating a Mastercard API compliant OAuth signature</description>
     <url>https://github.com/Mastercard/oauth1-signer-java</url>
     <name>oauth1-signer</name>
 
     <properties>
-        <spring-version>5.1.9.RELEASE</spring-version>
+        <spring-version>5.2.8.RELEASE</spring-version>
         <okhttp2-version>2.7.5</okhttp2-version>
-        <okhttp3-version>3.12.0</okhttp3-version>
+        <okhttp3-version>4.8.1</okhttp3-version>
         <google-api-client-version>1.23.0</google-api-client-version>
-        <feign-version>9.4.0</feign-version>
+        <feign-version>9.7.0</feign-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <gpg.signature.skip>false</gpg.signature.skip>
     </properties>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.5</version>
+            <version>4.5.12</version>
             <scope>provided</scope>
         </dependency>
 
@@ -99,14 +99,14 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>1.7.1</version>
+            <version>2.9.1</version> <!-- We can't bump this one because of the Java 7 support -->
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -196,7 +196,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>generate-javadoc</id>
