--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
   - jdk: openjdk10
   - jdk: openjdk11
   - jdk: openjdk12
+  - jdk: openjdk13
 install: true
 script:
   - mvn clean install "-Dgpg.signature.skip=$GPG_SIGNATURE_SKIP"
