--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -21,4 +21,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build and test with Maven
-      run: mvn clean install -Dgpg.signature.skip=true --file pom.xml
+      run: mvn -B package -Dgpg.signature.skip=true --file pom.xml
