--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Build & Test with maven
 
 on:
@@ -13,12 +10,18 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        java: [ 8, 9, 10, 11, 12, 13, 14 ]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+      with:
+        fetch-depth: 0
+    - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: ${{ matrix.java }}
     - name: Build and test with Maven
       run: mvn -B package -Dgpg.signature.skip=true --file pom.xml
