--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -25,4 +25,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectName=oauth1-signer-java -Dsonar.projectKey=$PROJECT_KEY -Dsonar.organization=$ORGANIZATION -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN -Dsonar.exclusions=**/*.xml -Dgpg.signature.skip=true
+        PROJECT_KEY: ${{ secrets.PROJECT_KEY }}
+        ORGANIZATION: ${{ secrets.ORGANIZATION }}
+        HOST_URL: ${{ secrets.HOST_URL }}
+      run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectName=oauth1-signer-java -Dsonar.projectKey=$PROJECT_KEY -Dsonar.organization=$ORGANIZATION -Dsonar.host.url=$HOST_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.exclusions=**/*.xml -Dgpg.signature.skip=true
