--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -1,29 +1,33 @@
 name: Build & Test
-
-on:
+'on':
   push:
-    branches: [ master ]
+    branches:
+      - main
   pull_request:
-    branches: [ master ]
+    branches:
+      - main
   schedule:
-    - cron: "0 16 * * *"
-
+    - cron: 0 16 * * *
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
     strategy:
       matrix:
-        java: [ 8, 9, 10, 11, 12, 13, 14 ]
-
+        java:
+          - 8
+          - 9
+          - 10
+          - 11
+          - 12
+          - 13
+          - 14
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@v1
-      with:
-        java-version: ${{ matrix.java }}
-    - name: Build and test with Maven
-      run: mvn -B package -Dgpg.signature.skip=true --file pom.xml
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: 'Set up JDK ${{ matrix.java }}'
+        uses: actions/setup-java@v1
+        with:
+          java-version: '${{ matrix.java }}'
+      - name: Build and test with Maven
+        run: mvn -B package -Dgpg.signature.skip=true --file pom.xml
