--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -2,12 +2,13 @@ name: Build & Test
 'on':
   push:
     branches:
-      - main
-  pull_request:
+      - "**"
+  pull_request_target:
     branches:
-      - main
+      - "**"
   schedule:
     - cron: 0 16 * * *
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
