Don't check https://mvnrepository.com/ links returning HTTP 403

--- a/.github/workflows/broken-links.yml
+++ b/.github/workflows/broken-links.yml
@@ -15,6 +15,6 @@ jobs:
         id: lc
         uses: peter-evans/link-checker@v1.2.2
         with:
-          args: '-v -r *'
+          args: -v -r * -x (mvnrepository)
       - name: Fail?
         run: 'exit ${{ steps.lc.outputs.exit_code }}'
