--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -3,7 +3,7 @@ name: Build & Test
   push:
     branches:
       - "**"
-  pull_request_target:
+  pull_request:
     branches:
       - "**"
   schedule:
@@ -15,14 +15,10 @@ jobs:
     strategy:
       matrix:
         java:
-          - 8
-          - 9
           - 11
-          - 12
-          - 13
-          - 14
+          - 17
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
         with:
           fetch-depth: 0
       - name: 'Set up JDK ${{ matrix.java }}'
