--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -14,20 +14,27 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+          java-package: jdk
+
+      - uses: actions/checkout@v1
         with:
           fetch-depth: 0
+
       - name: Check for external PR
         if: ${{ !(contains(github.event.pull_request.labels.*.name, 'safe') ||
           github.event.pull_request.head.repo.full_name == github.repository ||
           github.event_name != 'pull_request_target') }}
         run: echo "Unsecure PR, must be labelled with the 'safe' label, then run the workflow again" && exit 1
-      - name: Set up JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
+
       - name: Build with Maven
-        run: mvn clean install -Dgpg.signature.skip=true --file pom.xml
+        run: >-
+          mvn clean install -Dgpg.signature.skip=true --file pom.xml
+
       - name: Sonar Scan
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
@@ -37,5 +44,5 @@ jobs:
           -Dsonar.projectName=oauth1-signer-java
           -Dsonar.projectKey=Mastercard_oauth1-signer-java
           -Dsonar.organization=mastercard -Dsonar.host.url=https://sonarcloud.io
-          -Dsonar.login=$SONAR_TOKEN -Dsonar.exclusions=**/*.xml
-          -Dgpg.signature.skip=true
+          -Dsonar.login=$SONAR_TOKEN -Dsonar.cpd.exclusions=**/OkHttp*.java
+          -Dsonar.exclusions=**/*.xml -Dgpg.signature.skip=true
