--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,8 +1,7 @@
 name: Maven Publish
 
 on:
-  release:
-    types: [published]
+  pull_request:
 
 jobs:
   build:
@@ -22,7 +21,7 @@ jobs:
         server-id: central
         server-username: MAVEN_CENTRAL_USERNAME
         server-password: MAVEN_CENTRAL_TOKEN
-        gpg-private-key: ${{ secrets.GPG_SECRET_KEY }}
+        gpg-private-key: ${{ secrets.TEST_SECRET_KEY }}
         gpg-passphrase: GPG_PASSPHRASE
 
     - name: Build and Test
@@ -30,7 +29,7 @@ jobs:
 
     - name: Publish to Maven Central
       env:
-        GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        GPG_PASSPHRASE: ${{ secrets.TEST_GPG_PASSPHRASE }}
         MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
         MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
       run: mvn -X deploy -Dmaven.javadoc.skip=false
