--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,10 @@
                         </goals>
                         <configuration>
                             <skip>${gpg.signature.skip}</skip>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
                         </configuration>
                     </execution>
                 </executions>
