--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
             <version>3.27.7</version> <!-- We can't bump this one because of the Java 7 support -->
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.21.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
